# TexasSolverLib

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
cmake/: TexasSolverConfig.cmake.in
docs/: cfr_core_cpp_port_plan.md  depth_limited_solving.md  flop_rta_memory_optimization_plan.md  hand_buckets.md  hunl_expected_value_audit_and_optimization_plan.md  hunl_flat_cfr_optimization_plan.md  mccfr_large_tree_implementation_plan.md  parallel_cfr_implementation_plan.md  parallel_cfr_review.md  parallel_cpu_solver_plan.md  parallel_memory_refactor.md  ranges.md  rust_cpp_port_status.md  simd_expansion_plan.md
examples/: gperftools_profile_demo.cpp  solve_kuhn.cpp
examples/benchmarks/: flat_scheduler_main.cpp  hunl_backend_compare_main.cpp  hunl_random_flat_main.cpp  main.cpp  range_cache_main.cpp
include/core/: abstraction.hpp  api.hpp  arena.hpp  core.hpp  dcfr.hpp  dcfr_vector.hpp  dcfr_vector_parallel.hpp  exploit.hpp  game.hpp  hunl.hpp  hunl_eval.hpp  hunl_solver.hpp  hunl_tree.hpp  kuhn.hpp  layout.hpp  leduc.hpp  lib.hpp  pcs.hpp  preflop.hpp  preflop_equity.hpp  preflop_rvr.hpp  simd.hpp  solver.hpp  suit_iso.hpp  types.hpp
include/games/: hunl.hpp  hunl_eval.hpp  hunl_flat_builder.hpp  hunl_flat_graph.hpp  hunl_solver.hpp  hunl_tree.hpp  kuhn.hpp  leduc.hpp
include/preflop/: preflop.hpp  preflop_equity.hpp  preflop_rvr.hpp
include/ranges/: bucket_projection.hpp  cache.hpp  propagation.hpp  range.hpp  source.hpp
include/solver/: dcfr.hpp  dcfr_vector.hpp  dcfr_vector_parallel.hpp  exploit.hpp  hunl_bucket_map.hpp  hunl_bucket_terminal.hpp  hunl_flat_dcfr.hpp  hunl_flat_expected_value.hpp  hunl_flat_pipeline.hpp  hunl_flat_state.hpp  parallel_dcfr.hpp  solver.hpp
include/util/: abstraction.hpp  aligned_allocator.hpp  api.hpp  infoset_lookup.hpp  infoset_registry.hpp  layout.hpp  pcs.hpp  profiling.hpp  simd.hpp  suit_iso.hpp
src/: main.cpp
src/core/: abstraction.cpp  arena.cpp  core.cpp  dcfr.cpp  dcfr_vector.cpp  dcfr_vector_parallel.cpp  exploit.cpp  hunl.cpp  hunl_eval.cpp  hunl_solver.cpp  hunl_tree.cpp  kuhn.cpp  layout.cpp  leduc.cpp  lib.cpp  pcs.cpp  preflop.cpp  preflop_equity.cpp  preflop_rvr.cpp  simd.cpp  solver.cpp  suit_iso.cpp  types.cpp
src/games/: hunl.cpp  hunl_eval.cpp  hunl_flat_builder.cpp  hunl_flat_graph.cpp  hunl_solver.cpp  hunl_tree.cpp  kuhn.cpp  leduc.cpp
src/preflop/: preflop.cpp  preflop_equity.cpp  preflop_rvr.cpp
src/ranges/: bucket_projection.cpp  cache.cpp  propagation.cpp  range.cpp  source.cpp
src/solver/: dcfr.cpp  dcfr_vector.cpp  dcfr_vector_parallel.cpp  exploit.cpp  hunl_bucket_map.cpp  hunl_bucket_terminal.cpp  hunl_flat_dcfr.cpp  hunl_flat_expected_value.cpp  hunl_flat_pipeline.cpp  hunl_flat_state.cpp  parallel_dcfr.cpp  solver.cpp
src/util/: abstraction.cpp  infoset_registry.cpp  layout.cpp  pcs.cpp  profiling.cpp  simd.cpp  suit_iso.cpp
tests/: main_test.cpp  test_abstraction.cpp  test_abstraction_fixture.hpp  test_abstraction_loader.cpp  test_arena.cpp  test_dcfr.cpp  test_dcfr_vector.cpp  test_eval.cpp  test_harness.hpp  test_hunl_bucket_model.cpp  test_hunl_eval.cpp  test_hunl_flat_dcfr.cpp  test_hunl_flat_expected_value.cpp  test_hunl_flat_graph.cpp  test_hunl_flat_pipeline.cpp  test_hunl_flat_state.cpp  test_hunl_regressions.cpp  test_hunl_solver_behavior.cpp  test_hunl_solver_regression_performance.cpp  test_hunl_solver_storage.cpp  test_hunl_state.cpp  test_hunl_tree.cpp  test_infoset_lookup.cpp  test_infoset_registry.cpp  test_kuhn.cpp  test_layout.cpp  test_leduc.cpp  test_main.cpp  test_parallel_dcfr.cpp  test_pcs.cpp  test_preflop.cpp  test_ranges_bucket_projection.cpp  test_ranges_cache.cpp  test_ranges_propagation.cpp  test_ranges_solver_integration.cpp  test_ranges_threading.cpp  test_ranges_validation.cpp  test_simd.cpp
